sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:5: error: '=' expected but ';' found.
  do{
^